--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +10,13 @@
 </head>
 
 <body>
-    <h2>Score: <span id="result"></span></h2>
-    <div class="grid"></div>
+    <div class="container">
+        <div class="head">
+            <h2>Score: <span id="result"></span></h2>
+        </div>
+    </div>
+
+    <div class="board"></div>
 </body>
+
 </html>
